[FEAT] Update codex season page

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3307,6 +3307,8 @@
   "season.codex.mutants.one": "Collect eggs to discover the {{item}}.",
   "season.codex.mutants.two": "Fish in the depths for the {{item}}.",
   "season.codex.mutants.three": "Experiment with flowers to discover the {{item}}.",
+  "season.codex.mutants.four": "Collect milk from your cows to discover the {{item}}.",
+  "season.codex.mutants.five": "Gather wool from your sheep to discover the {{item}}.",
   "share.TweetText": "Visit My Sunflower Land Farm",
   "share.ShareYourFarmLink": "Share Your Farm Link",
   "share.ShowOffToFarmers": "Show off to fellow farmers by sharing your farm link",
