[FEAT] Add dynamic dates

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3295,8 +3295,8 @@
   "season.codex.intro": "Earn {{ticket}}s to craft exclusive collectibles & wearables for your farm in this limited season...Hurry before time runs out!",
   "season.codex.howToEarn": "How to earn {{ticket}}s?",
   "season.codex.howToEarn.one": "Visit the plaza & deliver resources to Bumpkins.",
-  "season.codex.howToEarn.two": "Complete chores for Bumpkins. (Nov 11th)",
-  "season.codex.howToEarn.three": "Trade animal and flower bounties! (Nov 11th)",
+  "season.codex.howToEarn.two": "Complete chores for Bumpkins. ({{date}})",
+  "season.codex.howToEarn.three": "Trade animal and flower bounties! ({{date}})",
   "season.codex.nextDrop": "Next Drop",
   "season.codex.nextDrop.available": "{{dropSupply}} available",
   "season.codex.seasonalDrops": "Seasonal Drops",
