Rename "Season" to "Chapter" across codebase
This commit updates references from "season" to "chapter" in various files, including translations, types, and components. The changes include:

- Renaming translation keys
- Updating type definitions
- Modifying component names and references
- Adjusting import and export statements

The refactoring ensures consistent terminology throughout the application, replacing "season" with "chapter".

--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -2896,18 +2896,18 @@
   "rules.noBots": "Kein Botting oder Automatisierung",
   "rules.termsOfService": "Nutzungsbedingungen",
   "sceneDialogues.chefIsBusy": "Der Koch ist beschäftigt",
-  "season.access": "Sie haben Zugriff auf:",
-  "season.banner": "Saisonales Banner",
-  "season.bonusTickets": "Bonus-Saisonkarten",
-  "season.boostXP": "+10% EXP aus Lebensmitteln",
-  "season.buyNow": "Jetzt kaufen",
-  "season.discount": "25% SFL-Rabatt auf saisonale Artikel",
-  "season.exclusiveOffer": "Exklusives Angebot!",
-  "season.goodLuck": "Viel Glück in der Saison!",
-  "season.includes": "Beinhaltet:",
-  "season.limitedOffer": "Nur für begrenzte Zeit!",
-  "season.wearableAirdrop": "Saisonal tragbarer Airdrop",
-  "season.place.land": "Du musst es auf deinem Land platzieren",
+  "chapter.access": "Sie haben Zugriff auf:",
+  "chapter.banner": "Saisonales Banner",
+  "chapter.bonusTickets": "Bonus-Saisonkarten",
+  "chapter.boostXP": "+10% EXP aus Lebensmitteln",
+  "chapter.buyNow": "Jetzt kaufen",
+  "chapter.discount": "25% SFL-Rabatt auf saisonale Artikel",
+  "chapter.exclusiveOffer": "Exklusives Angebot!",
+  "chapter.goodLuck": "Viel Glück in der Saison!",
+  "chapter.includes": "Beinhaltet:",
+  "chapter.limitedOffer": "Nur für begrenzte Zeit!",
+  "chapter.wearableAirdrop": "Saisonal tragbarer Airdrop",
+  "chapter.place.land": "Du musst es auf deinem Land platzieren",
   "season.megastore.discount": "Megastore SFL Rabatt",
   "season.supporter.gift": "Geschenk für Unterstützer",
   "season.free.season.passes": "Kostenlose Saison-Banner",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Verkauf freischalten",
   "marketplace.unlockOffering": "Angebot freischalten",
   "marketplace.vip.access": "Unbegrenzter Marktplatzzugang",
-  "marketplace.vip.season.access": "Unbegrenzter Marktplatzzugang während der Saison",
+  "marketplace.vip.chapter.access": "Unbegrenzter Marktplatzzugang während der Saison",
   "marketplace.welcome.one": "Hallöchen, Partner! Willkommen auf dem Marktplatz. Ihr One-Stop-Shop für alles, was mit Landwirtschaft zu tun hat.",
   "marketplace.welcome.two": "Hier kannst du Ressourcen handeln, exklusive Sammlerstücke kaufen und deine Farm aufwerten.",
   "marketplace.welcome.three": "Der Marktplatz verwendet ausschließlich $SFL, die Währung von Sunflower Land. Du kannst $SFL im Spiel verdienen oder mit anderen Spielern handeln.",
