--- a/src/lib/i18n/dictionaries/en.json
+++ b/src/lib/i18n/dictionaries/en.json
@@ -3263,18 +3263,18 @@
   "rules.noBots": "No botting or automation",
   "rules.termsOfService": "Terms of Service",
   "sceneDialogues.chefIsBusy": "Chef is busy",
-  "season.access": "You have access to:",
-  "season.banner": "Seasonal Banner",
-  "season.bonusTickets": "Bonus Seasonal Tickets",
-  "season.boostXP": "+10% EXP from food",
-  "season.buyNow": "Buy Now",
-  "season.discount": "25% SFL discount on seasonal items",
-  "season.exclusiveOffer": "Exclusive offer!",
-  "season.goodLuck": "Good luck in the season!",
-  "season.includes": "Includes:",
-  "season.limitedOffer": " Limited time only!",
-  "season.wearableAirdrop": "Seasonal Wearable Airdrop",
-  "season.place.land": "You must place it on your land",
+  "chapter.access": "You have access to:",
+  "chapter.banner": "Seasonal Banner",
+  "chapter.bonusTickets": "Bonus Seasonal Tickets",
+  "chapter.boostXP": "+10% EXP from food",
+  "chapter.buyNow": "Buy Now",
+  "chapter.discount": "25% SFL discount on seasonal items",
+  "chapter.exclusiveOffer": "Exclusive offer!",
+  "chapter.goodLuck": "Good luck in the season!",
+  "chapter.includes": "Includes:",
+  "chapter.limitedOffer": " Limited time only!",
+  "chapter.wearableAirdrop": "Seasonal Wearable Airdrop",
+  "chapter.place.land": "You must place it on your land",
   "season.megastore.discount": "Megastore SFL discount",
   "season.supporter.gift": "Supporter Gift",
   "season.free.season.passes": "Free Season Banners",
@@ -3699,7 +3699,7 @@
   "easterEgg.goldtoothsDiary": "Goldtooth's Diary",
   "easterEgg.pharaohsDiary": "Pharaoh's Diary",
   "marketplace.vip.access": "Unlimited marketplace access",
-  "marketplace.vip.season.access": "Unlimited marketplace access during the season",
+  "marketplace.vip.chapter.access": "Unlimited marketplace access during the season",
   "marketplace.saleHistory": "Sales History",
   "marketplace.supply": "Supply: {{supply}}",
   "marketplace.title3": "Title",
