--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -2862,18 +2862,18 @@
   "rules.noBots": "Sin necesidad de bots ni automatización",
   "rules.termsOfService": "Términos de servicio",
   "sceneDialogues.chefIsBusy": "El chef está ocupado",
-  "season.access": "Tienes acceso a:",
-  "season.banner": "Banner de temporada",
-  "season.bonusTickets": "Boletos de temporada adicionales",
-  "season.boostXP": "+10% de EXP por comida",
-  "season.buyNow": "Comprar ahora",
-  "season.discount": "25% de descuento SFL en artículos de temporada",
-  "season.exclusiveOffer": "Oferta exclusiva!",
-  "season.goodLuck": "Buena suerte en la temporada!",
-  "season.includes": "Incluye:",
-  "season.limitedOffer": "Solo por tiempo limitado!",
-  "season.wearableAirdrop": "Airdrop portátil de temporada",
-  "season.place.land": "Debes colocarlo en tu terreno",
+  "chapter.access": "Tienes acceso a:",
+  "chapter.banner": "Banner de temporada",
+  "chapter.bonusTickets": "Boletos de temporada adicionales",
+  "chapter.boostXP": "+10% de EXP por comida",
+  "chapter.buyNow": "Comprar ahora",
+  "chapter.discount": "25% de descuento SFL en artículos de temporada",
+  "chapter.exclusiveOffer": "Oferta exclusiva!",
+  "chapter.goodLuck": "Buena suerte en la temporada!",
+  "chapter.includes": "Incluye:",
+  "chapter.limitedOffer": "Solo por tiempo limitado!",
+  "chapter.wearableAirdrop": "Airdrop portátil de temporada",
+  "chapter.place.land": "Debes colocarlo en tu terreno",
   "season.megastore.discount": "Descuento Megastore SFL",
   "season.supporter.gift": "Regalo para seguidores",
   "season.free.season.passes": "Banners de temporada gratuita",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Desbloquea las ventas",
   "marketplace.unlockOffering": "Oferta de desbloqueo",
   "marketplace.vip.access": "Acceso ilimitado al mercado",
-  "marketplace.vip.season.access": "Acceso ilimitado al mercado durante la temporada",
+  "marketplace.vip.chapter.access": "Acceso ilimitado al mercado durante la temporada",
   "marketplace.welcome.one": "¡Qué tal, compañero! Bienvenido al Marketplace. Su ventanilla única para todo lo relacionado con Farm-tastic.",
   "marketplace.welcome.two": "Aquí puedes intercambiar recursos, comprar objetos coleccionables exclusivos y mejorar tu granja.",
   "marketplace.welcome.three": "El mercado utiliza exclusivamente $SFL, la moneda de Sunflower Land. Puedes ganar $ SFL en el juego o comerciar con otros jugadores.",
