--- a/src/lib/i18n/dictionaries/fr.json
+++ b/src/lib/i18n/dictionaries/fr.json
@@ -2041,18 +2041,18 @@
   "do.not.share.code": "Ne partagez pas ce code !",
   "qr.code.not.working": "Le code QR ne fonctionne pas ?",
   "sceneDialogues.chefIsBusy": "Le chef est occupé",
-  "season.access": "Vous avez accès à",
-  "season.banner": "Bannière saisonnière",
-  "season.bonusTickets": "Billets saisonniers bonus",
-  "season.boostXP": "+10% EXP provenant de la nourriture",
-  "season.buyNow": "Acheter maintenant",
-  "season.discount": "25% de réduction SFL sur les articles saisonniers",
-  "season.exclusiveOffer": "Offre exclusive!",
-  "season.goodLuck": "Bonne chance dans la saison!",
-  "season.includes": "Comprend",
-  "season.limitedOffer": " Offre à durée limitée!",
-  "season.wearableAirdrop": "Distribution de vêtements saisonniers",
-  "season.place.land": "Vous devez le placer sur votre terrain",
+  "chapter.access": "Vous avez accès à",
+  "chapter.banner": "Bannière saisonnière",
+  "chapter.bonusTickets": "Billets saisonniers bonus",
+  "chapter.boostXP": "+10% EXP provenant de la nourriture",
+  "chapter.buyNow": "Acheter maintenant",
+  "chapter.discount": "25% de réduction SFL sur les articles saisonniers",
+  "chapter.exclusiveOffer": "Offre exclusive!",
+  "chapter.goodLuck": "Bonne chance dans la saison!",
+  "chapter.includes": "Comprend",
+  "chapter.limitedOffer": " Offre à durée limitée!",
+  "chapter.wearableAirdrop": "Distribution de vêtements saisonniers",
+  "chapter.place.land": "Vous devez le placer sur votre terrain",
   "share.TweetText": "Visitez ma ferme de Sunflower Land",
   "share.ShareYourFarmLink": "Partagez le lien de votre ferme",
   "share.ShowOffToFarmers": "Impressionnez vos collègues agriculteurs en partageant le lien de votre ferme (URL : pour visiter directement votre ferme!",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Débloquez la vente",
   "marketplace.unlockOffering": "Débloquez l'offre",
   "marketplace.vip.access": "Accès illimité à la place de marché",
-  "marketplace.vip.season.access": "Accès illimité à la place de marché pendant la saison",
+  "marketplace.vip.chapter.access": "Accès illimité à la place de marché pendant la saison",
   "marketplace.welcome.one": "Bonjour, partenaire ! Bienvenue sur la Marketplace. Votre guichet unique pour tout ce qui touche à la ferme.",
   "marketplace.welcome.two": "Ici, vous pouvez échanger des ressources, acheter des objets de collection exclusifs et dynamiser votre ferme.",
   "marketplace.welcome.three": "La place de marché utilise exclusivement le $SFL, la devise de Sunflower Land. Vous pouvez gagner des $ SFL en jeu ou en échangeant avec d'autres joueurs.",
