--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -2902,18 +2902,18 @@
   "rules.noBots": "Tidak ada pembotolan atau otomatisasi",
   "rules.termsOfService": "Ketentuan Layanan",
   "sceneDialogues.chefIsBusy": "Chef sibuk",
-  "season.access": "Anda memiliki akses ke:",
-  "season.banner": "Spanduk Musiman",
-  "season.bonusTickets": "Tiket Musiman Bonus",
-  "season.boostXP": "+10% EXP dari makanan",
-  "season.buyNow": "Beli Sekarang",
-  "season.discount": "Diskon 25% SFL untuk item musiman",
-  "season.exclusiveOffer": "Penawaran eksklusif!",
-  "season.goodLuck": "Semoga sukses di musim ini!",
-  "season.includes": "Termasuk:",
-  "season.limitedOffer": "Hanya waktu terbatas!",
-  "season.wearableAirdrop": "Airdrop yang Dapat Dipakai Musiman",
-  "season.place.land": "Anda harus meletakkannya di tanah Anda",
+  "chapter.access": "Anda memiliki akses ke:",
+  "chapter.banner": "Spanduk Musiman",
+  "chapter.bonusTickets": "Tiket Musiman Bonus",
+  "chapter.boostXP": "+10% EXP dari makanan",
+  "chapter.buyNow": "Beli Sekarang",
+  "chapter.discount": "Diskon 25% SFL untuk item musiman",
+  "chapter.exclusiveOffer": "Penawaran eksklusif!",
+  "chapter.goodLuck": "Semoga sukses di musim ini!",
+  "chapter.includes": "Termasuk:",
+  "chapter.limitedOffer": "Hanya waktu terbatas!",
+  "chapter.wearableAirdrop": "Airdrop yang Dapat Dipakai Musiman",
+  "chapter.place.land": "Anda harus meletakkannya di tanah Anda",
   "season.megastore.discount": "Diskon Megastore SFL",
   "season.supporter.gift": "Hadiah Pendukung",
   "season.free.season.passes": "Spanduk Musim Gratis",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Buka kunci penjualan",
   "marketplace.unlockOffering": "Buka penawaran",
   "marketplace.vip.access": "Akses pasar tanpa batas",
-  "marketplace.vip.season.access": "Akses pasar tanpa batas selama musim",
+  "marketplace.vip.chapter.access": "Akses pasar tanpa batas selama musim",
   "marketplace.welcome.one": "Halo, rekan! Selamat datang di pasar. Toko serba ada Anda untuk semua hal yang lezat di pertanian.",
   "marketplace.welcome.two": "Di sini Anda dapat memperdagangkan sumber daya, membeli koleksi eksklusif & meningkatkan pertanian Anda.",
   "marketplace.welcome.three": "Pasar secara eksklusif menggunakan $SFL, mata uang Sunflower Land. Anda bisa mendapatkan $SFL dalam game atau berdagang dengan pemain lain.",
