--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -2860,18 +2860,18 @@
   "rules.noBots": "Nessun botting o automazione",
   "rules.termsOfService": "Termini di servizio",
   "sceneDialogues.chefIsBusy": "Lo chef è occupato",
-  "season.access": "Hai accesso a:",
-  "season.banner": "Banner stagionale",
-  "season.bonusTickets": "Biglietti stagionali bonus",
-  "season.boostXP": "+10% EXP dal cibo",
-  "season.buyNow": "Acquista ora",
-  "season.discount": "25% di sconto SFL sugli articoli stagionali",
-  "season.exclusiveOffer": "Offerta esclusiva!",
-  "season.goodLuck": "Buona fortuna per la stagione!",
-  "season.includes": "Include:",
-  "season.limitedOffer": "Solo per un tempo limitato!",
-  "season.wearableAirdrop": "Airdrop indossabile stagionale",
-  "season.place.land": "Devi metterlo sulla tua terra",
+  "chapter.access": "Hai accesso a:",
+  "chapter.banner": "Banner stagionale",
+  "chapter.bonusTickets": "Biglietti stagionali bonus",
+  "chapter.boostXP": "+10% EXP dal cibo",
+  "chapter.buyNow": "Acquista ora",
+  "chapter.discount": "25% di sconto SFL sugli articoli stagionali",
+  "chapter.exclusiveOffer": "Offerta esclusiva!",
+  "chapter.goodLuck": "Buona fortuna per la stagione!",
+  "chapter.includes": "Include:",
+  "chapter.limitedOffer": "Solo per un tempo limitato!",
+  "chapter.wearableAirdrop": "Airdrop indossabile stagionale",
+  "chapter.place.land": "Devi metterlo sulla tua terra",
   "season.megastore.discount": "Sconto Megastore SFL",
   "season.supporter.gift": "Regalo per i tifosi",
   "season.free.season.passes": "Banner stagionali gratuiti",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Sblocca la vendita",
   "marketplace.unlockOffering": "Sblocca l'offerta",
   "marketplace.vip.access": "Accesso illimitato al marketplace",
-  "marketplace.vip.season.access": "Accesso illimitato al marketplace durante la stagione",
+  "marketplace.vip.chapter.access": "Accesso illimitato al marketplace durante la stagione",
   "marketplace.welcome.one": "Salve, partner! Benvenuto nel Marketplace. Il tuo punto di riferimento per tutto ciò che riguarda i prodotti agricoli.",
   "marketplace.welcome.two": "Qui puoi scambiare risorse, acquistare oggetti da collezione esclusivi e potenziare la tua fattoria.",
   "marketplace.welcome.three": "Il marketplace utilizza esclusivamente $SFL, la valuta di Sunflower Land. Puoi guadagnare $SFL giocando o facendo trading con altri giocatori.",
