--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -2902,18 +2902,18 @@
   "rules.noBots": "ボッティングや自動化なし",
   "rules.termsOfService": "サービス規約",
   "sceneDialogues.chefIsBusy": "シェフは忙しい",
-  "season.access": "以下にアクセスできます。",
-  "season.banner": "季節限定バナー",
-  "season.bonusTickets": "季節限定ボーナスチケット",
-  "season.boostXP": "料理から得られる経験値 +10%",
-  "season.buyNow": "今すぐ購入",
-  "season.discount": "季節商品のSFL割引 25%",
-  "season.exclusiveOffer": "限定オファー！",
-  "season.goodLuck": "今シーズン頑張ってください！",
-  "season.includes": "含まれるもの:",
-  "season.limitedOffer": "期間限定！",
-  "season.wearableAirdrop": "季節限定のウェアラブルエアドロップ",
-  "season.place.land": "自分の土地に置かなければなりません。",
+  "chapter.access": "以下にアクセスできます。",
+  "chapter.banner": "季節限定バナー",
+  "chapter.bonusTickets": "季節限定ボーナスチケット",
+  "chapter.boostXP": "料理から得られる経験値 +10%",
+  "chapter.buyNow": "今すぐ購入",
+  "chapter.discount": "季節商品のSFL割引 25%",
+  "chapter.exclusiveOffer": "限定オファー！",
+  "chapter.goodLuck": "今シーズン頑張ってください！",
+  "chapter.includes": "含まれるもの:",
+  "chapter.limitedOffer": "期間限定！",
+  "chapter.wearableAirdrop": "季節限定のウェアラブルエアドロップ",
+  "chapter.place.land": "自分の土地に置かなければなりません。",
   "season.megastore.discount": "メガストアSFL割引",
   "season.supporter.gift": "サポーターギフト",
   "season.free.season.passes": "フリーシーズンバナー",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "販売のロックを解除",
   "marketplace.unlockOffering": "オファーのロック解除",
   "marketplace.vip.access": "無制限のマーケットプレイスアクセス",
-  "marketplace.vip.season.access": "シーズン中はマーケットプレイスに無制限にアクセス可能",
+  "marketplace.vip.chapter.access": "シーズン中はマーケットプレイスに無制限にアクセス可能",
   "marketplace.welcome.one": "やあ、相棒！マーケットプレイスへようこそ。農場の美味しいものをすべて揃えたワンストップショップ。",
   "marketplace.welcome.two": "ここでは、資源を交換したり、限定グッズを購入したり、農場を強化したりできます。",
   "marketplace.welcome.three": "マーケットプレイスでは、サンフラワーランドの通貨である$SFLのみを使用しています。$SFLはゲーム内で獲得することも、他のプレイヤーと取引することもできます。",
