--- a/src/lib/i18n/dictionaries/ko.json
+++ b/src/lib/i18n/dictionaries/ko.json
@@ -2899,18 +2899,18 @@
   "rules.noBots": "봇팅이나 자동화가 필요 없음",
   "rules.termsOfService": "서비스 약관",
   "sceneDialogues.chefIsBusy": "셰프가 바빠요",
-  "season.access": "다음에 액세스할 수 있습니다.",
-  "season.banner": "시즌 배너",
-  "season.bonusTickets": "보너스 시즌 티켓",
-  "season.boostXP": "음식 획득 경험치 10% 증가",
-  "season.buyNow": "지금 구매하기",
-  "season.discount": "시즌 상품 25% SFL 할인",
-  "season.exclusiveOffer": "독점 혜택!",
-  "season.goodLuck": "시즌에 행운을 빕니다!",
-  "season.includes": "포함 사항:",
-  "season.limitedOffer": "기간 한정!",
-  "season.wearableAirdrop": "시즌별 웨어러블 에어드랍",
-  "season.place.land": "당신은 그것을 당신의 땅에 놓아야 합니다",
+  "chapter.access": "다음에 액세스할 수 있습니다.",
+  "chapter.banner": "시즌 배너",
+  "chapter.bonusTickets": "보너스 시즌 티켓",
+  "chapter.boostXP": "음식 획득 경험치 10% 증가",
+  "chapter.buyNow": "지금 구매하기",
+  "chapter.discount": "시즌 상품 25% SFL 할인",
+  "chapter.exclusiveOffer": "독점 혜택!",
+  "chapter.goodLuck": "시즌에 행운을 빕니다!",
+  "chapter.includes": "포함 사항:",
+  "chapter.limitedOffer": "기간 한정!",
+  "chapter.wearableAirdrop": "시즌별 웨어러블 에어드랍",
+  "chapter.place.land": "당신은 그것을 당신의 땅에 놓아야 합니다",
   "season.megastore.discount": "메가스토어 SFL 할인",
   "season.supporter.gift": "서포터 기프트",
   "season.free.season.passes": "프리 시즌 배너",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "판매 잠금 해제",
   "marketplace.unlockOffering": "오퍼링 잠금 해제",
   "marketplace.vip.access": "무제한 마켓플레이스 액세스",
-  "marketplace.vip.season.access": "시즌 동안 무제한 마켓플레이스 이용",
+  "marketplace.vip.chapter.access": "시즌 동안 무제한 마켓플레이스 이용",
   "marketplace.welcome.one": "안녕하세요, 파트너!마켓플레이스에 오신 것을 환영합니다.농장의 맛을 느낄 수 있는 모든 것을 원스톱으로 구매할 수 있는 곳입니다.",
   "marketplace.welcome.two": "여기서 자원을 교환하고, 독점 수집품을 구입하고, 농장을 강화할 수 있습니다.",
   "marketplace.welcome.three": "마켓플레이스는 선플라워 랜드의 통화인 $SFL을 독점적으로 사용합니다.게임 내에서 또는 다른 플레이어와 거래하여 $SFL을 벌 수 있습니다.",
