--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -1984,18 +1984,18 @@
   "rules.noBots": "Sem bots ou automação",
   "rules.termsOfService": "Termos de Serviço",
   "sceneDialogues.chefIsBusy": "O Chef está ocupado",
-  "season.access": "Você tem acesso a",
-  "season.banner": "Banner Sazonal",
-  "season.bonusTickets": "Bônus de Bilhetes Sazonais",
-  "season.boostXP": "+10% de EXP dos alimentos",
-  "season.buyNow": "Comprar Agora",
-  "season.discount": "Desconto de 25% em itens sazonais de Temporada!",
-  "season.exclusiveOffer": "Oferta exclusiva!",
-  "season.goodLuck": "Boa sorte na temporada!",
-  "season.includes": "Inclui",
-  "season.limitedOffer": " Somente por tempo limitado!",
-  "season.wearableAirdrop": "Airdrop deVestíveis",
-  "season.place.land": "Você deve colocá-lo em sua terra",
+  "chapter.access": "Você tem acesso a",
+  "chapter.banner": "Banner Sazonal",
+  "chapter.bonusTickets": "Bônus de Bilhetes Sazonais",
+  "chapter.boostXP": "+10% de EXP dos alimentos",
+  "chapter.buyNow": "Comprar Agora",
+  "chapter.discount": "Desconto de 25% em itens sazonais de Temporada!",
+  "chapter.exclusiveOffer": "Oferta exclusiva!",
+  "chapter.goodLuck": "Boa sorte na temporada!",
+  "chapter.includes": "Inclui",
+  "chapter.limitedOffer": " Somente por tempo limitado!",
+  "chapter.wearableAirdrop": "Airdrop deVestíveis",
+  "chapter.place.land": "Você deve colocá-lo em sua terra",
   "share.TweetText": "Visite Minha Fazenda Sunflower Land",
   "share.ShareYourFarmLink": "Compartilhe o Link da Sua Fazenda",
   "share.ShowOffToFarmers": "Mostre aos outros fazendeiros compartilhando o link da sua fazenda (URL: para visitar diretamente sua fazenda!",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Desbloqueie a venda",
   "marketplace.unlockOffering": "Desbloqueie a oferta",
   "marketplace.vip.access": "Acesso ilimitado ao mercado",
-  "marketplace.vip.season.access": "Acesso ilimitado ao mercado durante a temporada",
+  "marketplace.vip.chapter.access": "Acesso ilimitado ao mercado durante a temporada",
   "marketplace.welcome.one": "Olá, parceiro! Bem-vindo ao Marketplace. Seu balcão único para todas as coisas fantásticas da fazenda.",
   "marketplace.welcome.two": "Aqui você pode trocar recursos, comprar itens colecionáveis exclusivos e impulsionar sua fazenda.",
   "marketplace.welcome.three": "O mercado usa exclusivamente $ SFL, a moeda da Sunflower Land. Você pode ganhar $ SFL no jogo ou negociando com outros jogadores.",
