--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -3136,7 +3136,7 @@
   "marketplace.unlockOffering": "Предложение по разблокировке",
   "marketplace.unlockSelling": "Разблокируйте продажи",
   "marketplace.vip.access": "Неограниченный доступ к торговой площадке",
-  "marketplace.vip.season.access": "Неограниченный доступ к торговой площадке в течение сезона",
+  "marketplace.vip.chapter.access": "Неограниченный доступ к торговой площадке в течение сезона",
   "marketplace.walletRequired": "Нужен кошелек",
   "marketplace.walletsHoldingCollectibles": "Кошельки с коллекционными предметами",
   "marketplace.wantToUnlock": "Хотите разблокировать неограниченное количество сделок?",
@@ -4239,13 +4239,13 @@
   "search": "Поиск",
   "searchHere": "Ищите здесь...",
   "searching": "Ищем",
-  "season.access": "У тебя есть доступ к",
+  "chapter.access": "У тебя есть доступ к",
   "season.autumn": "Осень",
-  "season.banner": "Сезонный баннер",
-  "season.bonusTickets": "Бонусные сезонные билеты",
-  "season.boostXP": "+10% Опыта от еды",
+  "chapter.banner": "Сезонный баннер",
+  "chapter.bonusTickets": "Бонусные сезонные билеты",
+  "chapter.boostXP": "+10% Опыта от еды",
   "season.bullRun.bonus": "На 10% меньше корма для животных",
-  "season.buyNow": "Купить сейчас",
+  "chapter.buyNow": "Купить сейчас",
   "season.codex.howToEarn": "Как получить {{ticket}}?",
   "season.codex.howToEarn.comingSoon": "Зарабатывайте подковы, выполняя работу по дому, доставками и наградами!",
   "season.codex.howToEarn.one": "Посещай плазу и доставляй ресурсы бампкинам.",
@@ -4262,18 +4262,18 @@
   "season.codex.seasonalDrops": "Сезонные аукционы",
   "season.codex.seasonalDrops.description": "Соревнуйся с другими игроками за самые редкие предметы! За подробностями обращайся к Auctioneer на плазе.",
   "season.codex.soldOut": "Расродано",
-  "season.discount": "Скидка 25% SFL на сезонные предметы",
-  "season.exclusiveOffer": "Эксклюзивное предложение!",
+  "chapter.discount": "Скидка 25% SFL на сезонные предметы",
+  "chapter.exclusiveOffer": "Эксклюзивное предложение!",
   "season.free.season.passes": "Бесплатные сезонные баннеры",
   "season.free.season.passes.description": "Получай баннеры для каждого сезона",
   "season.free.with.lifetime": "Бесплатно с Lifetime Farmer",
-  "season.goodLuck": "Удачи в сезоне!",
-  "season.includes": "Содержит:",
+  "chapter.goodLuck": "Удачи в сезоне!",
+  "chapter.includes": "Содержит:",
   "season.lifetime.farmer": "Фермер на всю жизнь",
-  "season.limitedOffer": "Ограниченное время!",
+  "chapter.limitedOffer": "Ограниченное время!",
   "season.megastore.discount": "Скидка на SFL в Мегасторе",
   "season.mystery.gift": "Таинственный подарок",
-  "season.place.land": "Ты должен разместить это на своей земле",
+  "chapter.place.land": "Ты должен разместить это на своей земле",
   "season.spring": "Весна",
   "season.summer": "Лето",
   "season.supporter.gift": "Подарок для сторонников",
@@ -4282,7 +4282,7 @@
   "season.vip.claim": "Забери свой ежемесячный сезонный аирдроп.",
   "season.vip.description": "Доминируй в сезоне благодаря привилегиям, скидкам, бонусным билетам, аирдропам и многому другому!",
   "season.vip.purchase": "Приобретите VIP-доступ",
-  "season.wearableAirdrop": "Аирдроп сезонной одежды",
+  "chapter.wearableAirdrop": "Аирдроп сезонной одежды",
   "season.winter": "Зима",
   "season.xp.boost": "10% XP буст",
   "seasonal": "Сезонные",
