--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -2039,18 +2039,18 @@
   "do.not.share.code": "Bu kodu paylaşmayın!",
   "qr.code.not.working": "QR kodu çalışmıyor mu?",
   "sceneDialogues.chefIsBusy": "Şef meşgul",
-  "season.access": "Erişiminiz var",
-  "season.banner": "Sezonluk Bayrak",
-  "season.bonusTickets": "Bonus Sezonluk Biletler",
-  "season.boostXP": "Yiyeceklerden +%10 XP",
-  "season.buyNow": "Şimdi al",
-  "season.discount": "Sezonluk ürünlerde %25 SFL indirimi",
-  "season.exclusiveOffer": "Özel teklif!",
-  "season.goodLuck": "Sezonda iyi şanslar!",
-  "season.includes": "İçerir",
-  "season.limitedOffer": " Sadece sınırlı süre için!",
-  "season.wearableAirdrop": "Sezonluk Giyilebilir Airdrop",
-  "season.place.land": "Onu kendi arazine koymalısın",
+  "chapter.access": "Erişiminiz var",
+  "chapter.banner": "Sezonluk Bayrak",
+  "chapter.bonusTickets": "Bonus Sezonluk Biletler",
+  "chapter.boostXP": "Yiyeceklerden +%10 XP",
+  "chapter.buyNow": "Şimdi al",
+  "chapter.discount": "Sezonluk ürünlerde %25 SFL indirimi",
+  "chapter.exclusiveOffer": "Özel teklif!",
+  "chapter.goodLuck": "Sezonda iyi şanslar!",
+  "chapter.includes": "İçerir",
+  "chapter.limitedOffer": " Sadece sınırlı süre için!",
+  "chapter.wearableAirdrop": "Sezonluk Giyilebilir Airdrop",
+  "chapter.place.land": "Onu kendi arazine koymalısın",
   "share.TweetText": "Ayçiçeği Arazi Çiftliğimi Ziyaret Edin",
   "share.ShareYourFarmLink": "Çiftlik Bağlantınızı Paylaşın",
   "share.ShowOffToFarmers": "Çiftlik bağlantınızı (URL: çiftliğinizi doğrudan ziyaret etmek için) paylaşarak çiftçi arkadaşlarınıza gösteriş yapın!",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Satışın kilidini açın",
   "marketplace.unlockOffering": "Teklifin kilidini aç",
   "marketplace.vip.access": "Sınırsız pazar erişimi",
-  "marketplace.vip.season.access": "Sezon boyunca sınırsız pazar yeri erişimi",
+  "marketplace.vip.chapter.access": "Sezon boyunca sınırsız pazar yeri erişimi",
   "marketplace.welcome.one": "Selamlar, ortak! Marketplace'e hoş geldiniz. Çiftlikle ilgili her şey için tek adresiniz.",
   "marketplace.welcome.two": "Burada kaynak ticareti yapabilir, özel koleksiyonlar satın alabilir ve çiftliğinizi güçlendirebilirsiniz.",
   "marketplace.welcome.three": "Pazar yeri yalnızca Sunflower Land'in para birimi olan $SFL kullanır. Oyun içinde $ SFL kazanabilir veya diğer oyuncularla ticaret yapabilirsiniz.",
