--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -1825,18 +1825,18 @@
   "rules.gameNotFinancialProduct": "这是一个游戏，不是一个金融产品。",
   "rules.noBots": "不允许机器人和脚本程序。",
   "rules.termsOfService": "服务条款",
-  "season.access": "你可以享受：",
-  "season.banner": "时季旗帜",
-  "season.bonusTickets": "完成交付后额外获得 2 张时季票券。",
-  "season.boostXP": "食物进食经验 +10%。",
-  "season.buyNow": "立刻购买",
-  "season.discount": "售价为 SFL 的时季商品可享受 25% 折扣。",
-  "season.exclusiveOffer": "独家特供！",
-  "season.goodLuck": "祝您这个时季好运！",
-  "season.includes": "包括：",
-  "season.limitedOffer": "限时特供！",
-  "season.wearableAirdrop": "免费时季穿戴品。",
-  "season.place.land": "您必须将旗帜放置在您的土地上",
+  "chapter.access": "你可以享受：",
+  "chapter.banner": "时季旗帜",
+  "chapter.bonusTickets": "完成交付后额外获得 2 张时季票券。",
+  "chapter.boostXP": "食物进食经验 +10%。",
+  "chapter.buyNow": "立刻购买",
+  "chapter.discount": "售价为 SFL 的时季商品可享受 25% 折扣。",
+  "chapter.exclusiveOffer": "独家特供！",
+  "chapter.goodLuck": "祝您这个时季好运！",
+  "chapter.includes": "包括：",
+  "chapter.limitedOffer": "限时特供！",
+  "chapter.wearableAirdrop": "免费时季穿戴品。",
+  "chapter.place.land": "您必须将旗帜放置在您的土地上",
   "share.ShareYourFarmLink": "分享您的农场链接",
   "share.ShowOffToFarmers": "分享您的农场链接来向农夫同志们炫耀。",
   "share.Tweet": "推文",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "解锁出售",
   "marketplace.unlockOffering": "解锁报价",
   "marketplace.vip.access": "无限制的市场功能权限",
-  "marketplace.vip.season.access": "时季期间无限制的市场功能权限",
+  "marketplace.vip.chapter.access": "时季期间无限制的市场功能权限",
   "marketplace.welcome.one": "你好，伙伴！欢迎来到市场。您可一站式购买所有农场美味佳品。",
   "marketplace.welcome.two": "在这里，您可以交易资源，购买独家收藏品并扩大您的农场。",
   "marketplace.welcome.three": "该市场仅使用向日葵乐园的货币 $SFL。你可以在游戏中赚取$SFL，也可以与其他玩家进行交易。",
