--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -2902,18 +2902,18 @@
   "rules.noBots": "Tiada botting atau automasi",
   "rules.termsOfService": "Syarat Perkhidmatan",
   "sceneDialogues.chefIsBusy": "Chef sibuk",
-  "season.access": "Anda mempunyai akses kepada:",
-  "season.banner": "Sepanduk bermusim",
-  "season.bonusTickets": "Tiket Bonus Musim",
-  "season.boostXP": "+10% EXP dari makanan",
-  "season.buyNow": "Beli Sekarang",
-  "season.discount": "Diskaun 25% SFL untuk barangan bermusim",
-  "season.exclusiveOffer": "Tawaran eksklusif!",
-  "season.goodLuck": "Nasib baik pada musim ini!",
-  "season.includes": "Termasuk:",
-  "season.limitedOffer": "Masa terhad sahaja!",
-  "season.wearableAirdrop": "Airdrop yang boleh dipakai bermusim",
-  "season.place.land": "Anda mesti meletakkannya di tanah anda",
+  "chapter.access": "Anda mempunyai akses kepada:",
+  "chapter.banner": "Sepanduk bermusim",
+  "chapter.bonusTickets": "Tiket Bonus Musim",
+  "chapter.boostXP": "+10% EXP dari makanan",
+  "chapter.buyNow": "Beli Sekarang",
+  "chapter.discount": "Diskaun 25% SFL untuk barangan bermusim",
+  "chapter.exclusiveOffer": "Tawaran eksklusif!",
+  "chapter.goodLuck": "Nasib baik pada musim ini!",
+  "chapter.includes": "Termasuk:",
+  "chapter.limitedOffer": "Masa terhad sahaja!",
+  "chapter.wearableAirdrop": "Airdrop yang boleh dipakai bermusim",
+  "chapter.place.land": "Anda mesti meletakkannya di tanah anda",
   "season.megastore.discount": "Diskaun Megastore SFL",
   "season.supporter.gift": "Hadiah Penyokong",
   "season.free.season.passes": "Sepanduk Musim Percuma",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "Buka kunci jualan",
   "marketplace.unlockOffering": "Buka kunci tawaran",
   "marketplace.vip.access": "Akses pasaran tanpa had",
-  "marketplace.vip.season.access": "Akses pasaran tanpa had sepanjang musim",
+  "marketplace.vip.chapter.access": "Akses pasaran tanpa had sepanjang musim",
   "marketplace.welcome.one": "Selamat datang, rakan kongsi! Selamat datang ke Pasaran. Kedai sehenti anda untuk semua perkara yang lazat ladang.",
   "marketplace.welcome.two": "Di sini anda boleh berdagang sumber, membeli koleksi eksklusif & meningkatkan ladang anda.",
   "marketplace.welcome.three": "Pasaran secara eksklusif menggunakan $SFL, mata wang Sunflower Land. Anda boleh memperoleh $SFL dalam permainan atau berdagang dengan pemain lain.",
